# Test_Task_Menti_CPP

./: CMakeLists.txt  README.md
Test_Task_Menti_CPP/: CMakeLists.txt  Test_Task_Menti_CPP.cpp  Test_Task_Menti_CPP.h  input.txt  main.cpp
